--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 body {
     padding-bottom: 30px;
+    background-color: #EEEEEE;
+    font-family: "微軟正黑體";
 }
 .councilor-photo {
     width: 55%;
@@ -28,12 +30,16 @@ ul.content li {
 .dropdown:hover .dropdown-menu {
     display: block;
 }
+ul.content li {
+    margin-top: 3px;
+}
 ul.content li a {
     text-decoration: none;
-    color: #428bca;
+    color: #348b8a;
+    font-weight: bold;
 }
 ul.content li a:hover {
-    color: #00a5e2;
+    color: #3da3a2;
 }
 .nav-style {
     background-color: #444444;
@@ -43,22 +49,18 @@ ul.content li a:hover {
 .navbar-default .navbar-nav > li > a {
     color: white;
 }
-.navbar-default .navbar-nav > li > a:hover{
+.navbar-default .navbar-nav > li > a:hover {
     color: #444444;
     background-color: #ffcc00;
-    font-weight: bold;
-    cursor: default;
 }
-.navbar-default .navbar-nav > li > a:focus{
+.navbar-default .navbar-nav > li > a:focus {
     color: white;
     background-color: #444444;
-    cursor: default;
 }
-.navbar-default .navbar-nav > li > a:hover:focus{
+.navbar-default .navbar-nav > li > a:hover:focus {
     color: #444444;
     background-color: #ffcc00;
     font-weight: bold;
-    cursor: default;
 }
 ul.dropdown-menu {
     padding: 0;
@@ -66,6 +68,9 @@ ul.dropdown-menu {
 }
 .dropdown-menu > li {
     background-color: #444444;
+}
+.dropdown-menu > li:last-child {
+    border-radius: 0 0 5px 5px;
 }
 .dropdown-menu > li > a {
     color: white;
@@ -84,18 +89,47 @@ ul.dropdown-menu {
     background-color: #ffcc00;
     font-weight: bold;
 }
-.navbar-default .navbar-brand{
+.navbar-default .navbar-brand {
     color: white;
 }
-.navbar-default .navbar-brand:hover{
-    cursor: default;
+.navbar-default .navbar-brand:hover {
     color: white;
 }
-.navbar-default .navbar-brand:focus{
-    cursor: default;
+.navbar-default .navbar-brand:focus {
     color: white;
 }
-.navbar-default .navbar-brand:hover:focus{
-    cursor: default;
+.navbar-default .navbar-brand:hover:focus {
     color: white;
+}
+.chart-wrapper {
+    border: 1px solid #444444;
+    padding-top: 20px;
+    box-shadow: 1px 1px #CCCCCC;
+}
+hr {
+    border-top: #444444 1px solid;
+    box-shadow: 1px 1px #CCCCCC;
+}
+h1, h2, h3, h4, h5, h6 {
+    text-shadow: 1px 1px #CCCCCC;
+}
+.thumbnail {
+    box-shadow: 1px 1px 5px #999999;
+}
+
+ul.content li div{
+    font-weight: bold;
+}
+
+
+.radar-chart .area, .circle{
+  fill-opacity: 0.7;
+  fill: #4fbbba;
+  stroke: #444444;
+}
+.radar-chart.focus .area {
+  fill-opacity: 0.3;
+}
+.radar-chart.focus .area.focused {
+  fill-opacity: 0.9;
 }
