enhance the search bar

--- a/css/index.css
+++ b/css/index.css
@@ -223,3 +223,8 @@ ul.content li div{
 ul.content li div.contact{
     display: block;
 }
+
+.suggestions li.picked {
+    background-color: #ffcc00;
+    color: black;
+}
