Fix news zoom glitch

--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@ ul.content li {
 .dropdown:hover .dropdown-menu {
     display: block;
 }
-ul.content li {
+html > /**/ body ul.content li {
     margin-top: 3px;
 }
 ul.content li a {
@@ -43,6 +43,8 @@ ul.content li a:hover {
 }
 .nav-style {
     background-color: #444444;
+    -moz-border-radius: 0;
+    -webkit-border-radius: 0;
     border-radius: 0;
     border: 0;
 }
@@ -82,9 +84,11 @@ ul.dropdown-menu {
     background-color: #ffcc00;
     color: #444444;
 }
-.dropdown-menu > li:last-child {
-    border-radius: 0 0 5px 5px;
-}
+    .dropdown-menu > li:last-child {
+        -moz-border-radius: 0 0 5px 5px;
+        -webkit-border-radius: 0 0 5px 5px;
+        border-radius: 0 0 5px 5px;
+    }
 .dropdown-menu > li > a {
     display: inline-block;
     vertical-align: middle;
@@ -118,16 +122,22 @@ ul.dropdown-menu {
 .chart-wrapper {
     border: 1px solid #444444;
     padding-top: 20px;
+    -moz-box-shadow: 1px 1px #CCCCCC;
+    -webkit-box-shadow: 1px 1px #CCCCCC;
     box-shadow: 1px 1px #CCCCCC;
 }
 hr {
     border-top: #444444 1px solid;
+    -moz-box-shadow: 1px 1px #CCCCCC;
+    -webkit-box-shadow: 1px 1px #CCCCCC;
     box-shadow: 1px 1px #CCCCCC;
 }
 h1, h2, h3, h4, h5, h6 {
     text-shadow: 1px 1px #CCCCCC;
 }
 .thumbnail {
+    -moz-box-shadow: 1px 1px 5px #999999;
+    -webkit-box-shadow: 1px 1px 5px #999999;
     box-shadow: 1px 1px 5px #999999;
 }
 ul.content li div {
@@ -151,32 +161,32 @@ div.party-pic {
     vertical-align: middle;
 }
 .party-pic.blue {
-    background-position: 0px 80px;
+    background-position: 0 80px;
     width: 20px;
     height: 20px;
 }
 .party-pic.green {
-    background-position: 0px 120px;
+    background-position: 0 120px;
     width: 20px;
     height: 20px;
 }
 .party-pic.orange {
-    background-position: 0px 20px;
+    background-position: 0 20px;
     width: 20px;
     height: 20px;
 }
 .party-pic.none {
-    background-position: 0px 100px;
+    background-position: 0 100px;
     width: 20px;
     height: 20px;
 }
 .party-pic.black {
-    background-position: 0px 40px;
+    background-position: 0 40px;
     width: 20px;
     height: 20px;
 }
 .party-pic.red {
-    background-position: 0px 60px;
+    background-position: 0 60px;
     width: 20px;
     height: 20px;
 }
@@ -187,7 +197,6 @@ div.party-pic {
 .suggestions {
     z-index: 999;
     background-color: #444444;
-    padding-left: 0;
     border: 1px solid #444444;    
     position: absolute;
     top: 36px;
@@ -217,7 +226,7 @@ div.header-searchbar{
 .clickable:hover {
     color: #3da3a2;
 }
-ul.content li div{
+html > /**/ body ul.content li div{
     display: inline-block;
 }
 ul.content li div.contact{
