--- a/css/c3.css
+++ b/css/c3.css
@@ -104,9 +104,16 @@
 
 /*-- Focus --*/
 
+.c3-target.c3-focused {
+  opacity: 1;
+}
 .c3-target.c3-focused path.c3-line, .c3-target.c3-focused path.c3-step {
   stroke-width: 2px;
 }
+.c3-target.c3-defocused {
+  opacity: 0.3 !important;
+}
+
 
 /*-- Region --*/
 
@@ -131,6 +138,9 @@
 .c3-legend-item {
   font-size: 12px;
 }
+.c3-legend-item-hidden {
+  opacity: 0.15;
+}
 
 .c3-legend-background {
   opacity: 0.75;
@@ -141,6 +151,9 @@
 
 /*-- Tooltip --*/
 
+.c3-tooltip-container {
+  z-index: 10;
+}
 .c3-tooltip {
   border-collapse:collapse;
   border-spacing:0;
@@ -199,5 +212,5 @@
 
 .c3-chart-arc .c3-gauge-value {
   fill: #000;
-  font-size: 28px;
+/*  font-size: 28px !important;*/
 }
